--- a/templates/worklists/worklist_list.html
+++ b/templates/worklists/worklist_list.html
@@ -21,12 +21,12 @@
       <div class="row">
         <div class="card w-2 border-0">
           <div class="col">             
-            <img src="/static/images/smart-home.png" class="card-img-top" width="55" height="45">          
+            <img id="status-icon" src="/static/images/smart-home.png" class="card-img-top" width="55" height="45">          
           </div>
         </div>
         <div class="col">
           <div class="row">
-            <div class="col">
+            <div class="col" id="title_card">
               <h5 class="card-title">{{location.name}} {{ location.id}}</h5>
             </div>       
           </div>
@@ -37,7 +37,7 @@
 <div class="modality-container" corresponding-location="{{ location.id }}">
 {% for modality in modality_list %}
 {% if modality.associate_location.id == location.id %}
-    <div class="accordion" id="accordion-{{ modality.id }}">
+    <div class="accordion" id="accordion-{{ modality.id }}" style="margin-bottom:15px;">
       <div class="card">
         <div class="card-header" id="heading-{{ modality.id }}">
           <h2 class="mb-0">
@@ -48,16 +48,11 @@
           </h2>
         </div>
         <div class="modality-worklist-list" corresponding-modality-aetitle="{{ modality.ae_title }}" corresponding-modality="{{ modality.id }}">
-        <!-- <div id="wl-{{modality.id}}" class="collapse show" aria-labelledby="heading-{{ modality.id }}" data-parent="#accordion-{{ modality.id }}">
-          <div class="card-body">
-            <ul>
-              <li> the existing worlists for this ae title</li>
-            </ul>
-          </div>
-        </div> -->
+        
         </div>
       </div>
     </div>
+
     {% endif %}
     {% endfor %}
   </div>
@@ -81,9 +76,14 @@
 <script>
 $(document).ready(function(){
    $("div[class='modality-container']").each(function (i) {
-     if ($.trim($(this).html()).length == 0) {
-       $(this).html('<p>Für diesen Standort wurden keine Modalitäten registriert.</p>');
-     }
+     if ($.trim($(this).html()).length == 0) {              
+        var icon = '<img id="status-icon" src="/static/images/cancel.png" width="25" height="25">';
+        var text = '<p>Für diesen Standort wurden keine Modalitäten registriert.</p>'; 
+        var position = '<div class="row"><div class="col-md-auto">'+ icon +'</div><div class="col-md-auto">'+ text +'</div><div class="col-md-auto">'+ icon +'</div>';
+              
+       $(this).html(position);     
+      
+      }
    });
 
   $("div[class='card border-info mb-3 w-100']").each(function (i) {  
@@ -99,6 +99,9 @@ $(document).ready(function(){
                     var patient_id = worklist["PatientID"];
                     var patient_name = worklist["PatientName"];
                     var study_id = worklist["StudyID"];
+                    var physicians_name = worklist["ScheduledProcedureStepSequence"]["ScheduledPerformingPhysicianName"];
+                    var create_date = worklist["ScheduledProcedureStepSequence"]["ScheduledProcedureStepStartDate"];
+                    var create_hour =  worklist["ScheduledProcedureStepSequence"]["ScheduledProcedureStepStartTime"];
                     console.log("Iterating over worklist_entries for worklist with accession_number " + accession_number)
                     $.get("/curapacs/study-by-accession-number/" + accession_number +"/statistics/", function(statisticsData){
                         console.log("Statistics Data received " + statisticsData);
@@ -107,7 +110,10 @@ $(document).ready(function(){
                           var resource_uid = statisticsData["content"]["resource_uid"];
                           var statistics_count_instances = statisticsData["content"]["statistics"]["CountInstances"];
                           var statistics_count_series =  statisticsData["content"]["statistics"]["CountSeries"];
-                          $("div[class=modality-container][corresponding-location=" + location_id + "]").html("Added new data, will change after" + statistics_count_instances + " | " + statistics_count_series + " | " + resource_uid);
+                          $("div[class=modality-container][corresponding-location=" + location_id + "]").html(
+                                                 "Anzahl Instanzen" + statistics_count_instances +
+                                                 "Anzahl Serien " + statistics_count_series + 
+                                                 "Resourcen UID " + resource_uid);
                         } else {
                           var found_study_for_accession_number = false;
                         }
@@ -121,16 +127,31 @@ $(document).ready(function(){
                                          + modality_id +
                                          '" class="collapse show" aria-labelledby="heading-' +
                                          modality_id + '" data-parent="#accordion-' +
-                                         modality_id + '"> <div class="card-body">\
-                                         <div class="card" style="width: 18rem;">\
-                                         <div class="card-body">\
-                                         <h6 class="card-subtitle mb-2 text-muted">\
-                                         Auftragsnummer</h6>\
-                                         <ul class="list-group list-group-flush">\
-                                         <li class="list-group-item"> ' +
-                                         accession_number +
-                                         '</li> </ul></div></div>\
-                                         </div> </div>';
+                                         modality_id + '"><table class="table table-hover">\
+                                        <thead>\
+                                          <tr>\
+                                            <th scope="col">#</th>\
+                                            <th scope="col">Auftragsnummer</th>\
+                                            <th scope="col">Zuständiger Artzt</th>\
+                                            <th scope="col">Datum</th>\
+                                            <th scope="col">Zeit</th>\
+                                            <th scope="col">Patient name</th>\
+                                          </tr>\
+                                        </thead>\
+                                        <tbody>\
+                                          <tr>\
+                                            <th scope="row">1</th>\
+                                            <td>'+ accession_number + '</td>\
+                                            <td>'+ physicians_name +'</td>\
+                                            <td>'+ create_date +'</td>\
+                                            <td>'+ create_hour +'</td>\
+                                            <td>'+ patient_name +'</td>\
+                                          </tr>\
+                                        </tbody>\
+                                      </table>\
+                                       </div>';
+
+
                     });
                 });
               }
@@ -140,10 +161,9 @@ $(document).ready(function(){
               var existing_html = $("div[class=modality-container][corresponding-location=" + location_id + "]").html();
               var prepend_message = "<p>Location timed out</p>";
               $("div[class=modality-container][corresponding-location=" + location_id + "]").html(prepend_message + existing_html);
+
               });
-              //div class="modality-container" corresponding-location="{{ location.id }}
-              // correspnding location id and add cancel img
-            
+                          
           });
 });
 
