--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,10 @@
 
   <title> curaMED</title>
 
-
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
 
-  <script
-			  src="https://code.jquery.com/jquery-3.5.1.js"
-			  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-			  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script> -->
@@ -29,53 +26,50 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
-
-
 </head>
 
 <body>
-  
- <nav class="navbar sticky-top navbar-light md-light border-0">
-  <div class="container-md">
-    <div class="card text-center w-100 ">
-      <div class="card-header  ">
-        <ul class="nav ">
-          <img src="/static/images/favicon.ico" width="30" height="30" alt="" loading="lazy">
-          <li class="nav-item"><a class="nav-link home" href="{% url 'home' %}">Home</a></li>
+  <nav class="navbar sticky-top navbar-light md-light border-0">
+    <div class="container-md">
+      <div class="card text-center w-100 ">
+        <div class="card-header  ">
+          <ul class="nav ">
+            <img src="/static/images/favicon.ico" width="30" height="30" alt="" loading="lazy">
+            <li class="nav-item"><a class="nav-link home" href="{% url 'home' %}">Home</a></li>
 
-          <li class="nav-item dropdown">
-            <button class="btn btn-link dropdown-toggle" type="button" id="dropdownPatientenButton"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Patienten</button>
-            <div class="dropdown-menu" aria-labelledby="dropdownPatientenButton">
-              <a class="dropdown-item" href="{% url 'patients' %}">Patientenliste</a>
-              <a class="dropdown-item" href="{% url 'patientCreate' %}">Patient erstellen</a>
-              <a class="dropdown-item" href="{% url 'patientsImport' %}">Patienten importieren</a>
-            </div>
-          </li>
+            <li class="nav-item dropdown">
+              <button class="btn btn-link dropdown-toggle" type="button" id="dropdownPatientenButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Patienten</button>
+              <div class="dropdown-menu" aria-labelledby="dropdownPatientenButton">
+                <a class="dropdown-item" href="{% url 'patients' %}">Patientenliste</a>
+                <a class="dropdown-item" href="{% url 'patientCreate' %}">Patient erstellen</a>
+                <a class="dropdown-item" href="{% url 'patientsImport' %}">Patienten importieren</a>
+              </div>
+            </li>
 
-          <li class="nav-item dropdown">
-            <button class="btn btn-link dropdown-toggle" type="button" id="dropdownModalityButton"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Modalitäten</button>
-            <div class="dropdown-menu" aria-labelledby="dropdownModalityButton">
-              <a class="dropdown-item" href="{% url 'modalityCreate' %}">Neue Modalität</a>
-              <a class="dropdown-item" href="{% url 'modalities' %}">Modalitäten anzeigen</a>   
-              <a class="dropdown-item" href="{% url 'worklistList' %}">Aufträge</a>               
-            </div>
-          </li>
+            <li class="nav-item dropdown">
+              <button class="btn btn-link dropdown-toggle" type="button" id="dropdownModalityButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Modalitäten</button>
+              <div class="dropdown-menu" aria-labelledby="dropdownModalityButton">
+                <a class="dropdown-item" href="{% url 'modalityCreate' %}">Neue Modalität</a>
+                <a class="dropdown-item" href="{% url 'modalities' %}">Modalitäten anzeigen</a>
+                <a class="dropdown-item" href="{% url 'worklistList' %}">Aufträge</a>
+              </div>
+            </li>
 
-          <li class="nav-item dropdown">
-            <button class="btn btn-link dropdown-toggle" type="button" id="dropdownAdminButton" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">Administration</button>
-            <div class="dropdown-menu" aria-labelledby="dropdownAdminButton"> 
-              <a class="dropdown-item" href="{% url 'locationCreate' %}">Standort konfigurieren </a>
-              <a class="dropdown-item" href="{% url 'administration' %}">Standorte anzeigen</a>
-          </div>
-          </li>
-          
-        </ul>
+            <li class="nav-item dropdown">
+              <button class="btn btn-link dropdown-toggle" type="button" id="dropdownAdminButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">Administration</button>
+              <div class="dropdown-menu" aria-labelledby="dropdownAdminButton">
+                <a class="dropdown-item" href="{% url 'locationCreate' %}">Standort konfigurieren </a>
+                <a class="dropdown-item" href="{% url 'administration' %}">Standorte anzeigen</a>
+              </div>
+            </li>
+
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
   </nav>
 
   <div class="container-md">
@@ -83,8 +77,6 @@
     this code will be replaced. just like you, if you are not good at your job
     {% endblock %}
   </div>
- 
 
 </body>
-
 </html>
